# compres

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  compres.c  decompres.c
